# CINEBOT

./: .gitignore  README.md  pyproject.toml  requirement.txt
streamlit/: app.py  database.py  movie_ratings.db
